# auth

./: .env_exemple  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: checking.yml  docker-publish.yml
bauth/: Cargo.toml
bauth-web/: README.md  package-lock.json  package.json
bauth-web/public/: global.css
bauth-web/src/: App.svelte
bauth-web/src/components/: Button.svelte
bauth-web/src/screens/: Home.svelte
bauth-web/src/stores/: store.ts
bauth/src/: errors.rs  jwt.rs  lib.rs  security.rs
bauth/src/domain/: mod.rs  security.rs
bauth/src/domain/application/: application.rs  application_store.rs  create_application.rs  mod.rs
bauth/src/domain/oauth/: authorization_attempt_store.rs  authorization_response.rs  errors.rs  mod.rs
bauth/src/domain/user/: mod.rs  user_store.rs
bauth/src/repositories/: app_repository.rs  mod.rs  user_repository.rs
bauth_server/: Cargo.toml
bauth_server/src/: config.rs  errors.rs  main.rs  templates.rs  utils.rs
bauth_server/src/admin/: admin_init.rs
bauth_server/src/routes/: admin_routes.rs  application_routes.rs  authorize.rs  login.rs  mod.rs  signup.rs  token.rs
bauth_server/src/templates/: admin.html
bauth_web/: .prettierrc  package-lock.json  package.json
bauth_web/public/: index.html
bauth_web/src/: App.svelte  BauthApi.ts  auth.ts
bauth_web/src/icons/: LoaderIcon.svelte
bauth_web/src/oauth-client/: OauthClient.ts
bauth_web/src/screens/: Auth.svelte  Home.svelte
infra/docker/: Dockerfile
migrations/2020-09-19-103209_auth/: down.sql  up.sql
src/: config.rs  errors.rs  jwt.rs  main.rs  password.rs  templates.rs
src/domain/: mod.rs
src/domain/application/: application_store.rs  create_application.rs
src/domain/oauth/: authorization_attempt.rs  authorization_attempt_store.rs  authorization_request.rs  authorization_response.rs  mod.rs
src/domain/user/: user.rs  user_store.rs
src/repositories/: app_repository.rs  auth_attempt_repository.rs  user_repository.rs
src/routes/: application_routes.rs  authorize.rs  create_app.rs  login.rs  mod.rs  signup.rs  token.rs
src/templates/: login.html  signup.html
