[package]
name = "auth"
version = "0.0.1"
authors = ["Egor <egor@berezify.fr>"]
edition = "2018"

[dependencies]
# Data types
chrono = {version = "0.4.15",features = ["serde"]}
uuid = {version = "0.8.1",features = ["serde","v4"]}
futures = "0.3.5"

# Serialisation
serde = {version = "1.0.116",features = ["derive"]}
serde_json = "1.0.57"

# Tools
derive-new = "0.5.8"
thiserror = "1.0.20"
async-trait = "0.1.40"
jemallocator = "0.3.2"

# Web
actix-web = "3.0.2"
actix-multipart = "0.3.0"
actix-files = "0.3.0"

# Database
sqlx = { version = "0.3.5", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }
diesel = {version = "1.4.5",features = ["postgres"]}
diesel_migrations = "1.4.0"

# Crypto
blake2 = "0.9.0"

# Environement
dotenv = "0.15.0"
envy = "0.4.1"
log = "0.4.11"
env_logger = "0.7.1"
