[package]
name = "bauth"
version = "0.1.0"
authors = ["Egor <egor@berezify.fr>"]
edition = "2018"

[dependencies]
# Data types
chrono = {version = "0.4.19",features = ["serde"]}
uuid = {version = "0.8.1",features = ["serde","v4"]}
futures = "0.3.5"
url = {version = "2.1.1", features = ["serde"]}

# Serialisation
serde = {version = "1.0.116",features = ["derive"]}

# Tools
thiserror = "1.0.20"
async-trait = "0.1.41"
validator = { version = "0.11.0", features = ["derive"] }
rand = "0.7.3"
itertools = "0.9.0"
strum = { version = "0.19.2", features = ["derive"] }
strum_macros = "0.19.2"

# Database
sqlx = { version = "0.3.5", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }

# Crypto
bcrypt = "0.8.2"
jsonwebtoken = "7.2.0"

# Environement
log = "0.4.11"
