[package]
name = "bauth"
version = "0.1.0"
authors = ["Egor <egor@berezify.fr>"]
edition = "2018"

[dependencies]
# Data types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde","v4"] }
futures = "0.3"
url = { version = "2.1", features = ["serde"] }

# Serialisation
serde = { version = "1.0", features = ["derive"] }

# Tools
thiserror = "1.0"
async-trait = "0.1"
validator = { version = "0.11", features = ["derive"] }
rand = "0.7"
itertools = "0.9"
strum = { version = "0.19", features = ["derive"] }

# Database
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }

# Crypto
bcrypt = "0.8"
jsonwebtoken = "7.2"

# Environement
log = "0.4"
