[package]
name = "bauth_server"
version = "0.1.0"
authors = ["Egor <egor@berezify.fr>"]
edition = "2018"

[dependencies]
bauth = { path = "../bauth" }
# Data types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3"
url = { version = "2.1", features = ["serde"] }

# Serialisation
serde = { version = "1.0",features = ["derive"] }
serde_json = "1.0"

# Tools
thiserror = "1.0"
async-trait = "0.1"
jemallocator = "0.3"
validator = { version = "0.11", features = ["derive"] }
rand = "0.7"
itertools = "0.9"
strum = { version = "0.19", features = ["derive"] }

# Web
actix-web = "3.1"
tera = "1.5"

# Database
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }
diesel = { version = "1.4",features = ["postgres"] }
diesel_migrations = "1.4"

# Crypto
bcrypt = "0.8"
jsonwebtoken = "7.2"

# Environement
dotenv = "0.15"
envy = "0.4"
log = "0.4"
env_logger = "0.7"
